2002-12-01  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_transform.c: Applied fix for 7 parameter shifts in 
	pj_geocentric_from_wgs84() as per suggestion from Harald Lernbeiss in:

	http://bugzilla.remotesensing.org/show_bug.cgi?id=194

2002-11-19  Frank Warmerdam  <warmerdam@pobox.com>

	* src/cs2cs.c: cleanup memory at end to facility memory leak testing.

2002-07-29  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/esri: applied gradian related patches as per bug 184:

	   http://bugzilla.remotesensing.org/show_bug.cgi?id=184

2002-07-25  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/esri: added new ESRI translation file.  Includes EPSG values
	plus various ESRI extensions. 

2002-07-07  Frank Warmerdam  <warmerdam@pobox.com>

	* src/*.c, src/*.h, src/makefile.vc: *Many* changes to support
	compiling all of the PROJ.4 source as C++ source.  Add /TP to CFLAGS
	in makefile.vc to test this on Windows.  projects.h, and proj_api.h 
	attempt to export all externally visible functions with C linkage but
	all code should now compile as C++.  Currently only tested with VC++ 6.

2002-06-11  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_pr_list.c, proj.def, proj_api.h: Added the pj_get_def()
	function to return an expanded definition from a projPJ handle, 
	including having the +init= section expanded.

2002-05-30  Frank Warmerdam  <warmerdam@pobox.com>

	* src/geod/{geod.c,geod_for.c,geod_inv.c,geod_set.c,geodesic.h}:
	Renamed a, S and f to geod_a, geod_S and geod_f to slightly reduce
	the horrible naming conflict situations with geodesic.h. 
	   http://bugzilla.remotesensing.org/show_bug.cgi?id=148

2002-04-30  Frank Warmerdam  <warmerdam@pobox.com>

	* html/faq.html: new

	* src/pj_apply_gridshift.c,pj_open_lib.c,nad_init.c: try to improve
	debug output when datum shifting fails.

2002-04-16  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_list.c,src/PJ_krovak.c: Incorporated support for Krovak