@@ -29,6 +29,9 @@
  ******************************************************************************
  *
  * $Log$
+ * Revision 1.6  2002/12/09 16:01:02  warmerda
+ * added prime meridian support
+ *
  * Revision 1.5  2002/11/19 20:33:42  warmerda
  * cleanup before exit to facilitate memory leak testing
  *
@@ -261,6 +264,12 @@ int main(int argc, char **argv)
                         if( ld->comments != NULL && strlen(ld->comments) > 0 )
                             printf( "%25s %s\n", " ", ld->comments );
                     }
+                } else if( arg[1] == 'm') { /* list prime meridians */
+                    struct PJ_PRIME_MERIDIANS *lpm;
+
+                    for (lpm = pj_prime_meridians; lpm->id ; ++lpm)
+                        (void)printf("%12s %-30s\n",
+                                     lpm->id, lpm->defn);
                 } else
                     emess(1,"invalid list option: l%c",arg[1]);
                 exit(0);
