@@ -1,3 +1,11 @@
+2002-12-08  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/cs2cs.c: added support for the -lm switch to report all
+	prime meridians.
+
+	* src/pj_init.c, pj_transform.c, pj_datum.c: added preliminary
+	support for the +pm switch to set the prime meridian.
+
 2002-12-01  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/pj_transform.c: Applied fix for 7 parameter shifts in 
